crates/eure-macros/tests/compile_fail/into_eure_flatten_ext_not_supported.rs
use eure::IntoEure;

#[derive(IntoEure)]
struct Test {
    #[eure(flatten_ext)]
    field: String,
}

fn main() {}
