crates/eure-macros/tests/compile_fail/into_eure_flatten_ext_not_supported.stderr
error: #[eure(flatten_ext)] is not yet supported for IntoEure derive on field `field`
 --> tests/compile_fail/into_eure_flatten_ext_not_supported.rs:5:12
  |
5 |     #[eure(flatten_ext)]
  |            ^^^^^^^^^^^
